fix(header) update header colors / higher contrast

--- a/site/web/app/themes/smart-city/resources/assets/styles/components/_page-header.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/components/_page-header.scss
@@ -31,7 +31,7 @@
 
 .page-header-secondary .circle {
   color: #fff;
-  background: #999;
+  background: #369;
   width: 6em;
   height: 6em;
   border: 2px solid #fff;
